add stage and arcade btns+ animation the animation is set specificly for thous btns so dont use them on other btn pressd/releas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MakeItEven</string>
+    <string name="Stage_mode">Stage mode</string>
+    <string name="Arcade_mode">Arcade_mode</string>
 </resources>
