add alert dialog and setting modification

--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -5,4 +5,7 @@
     <string name="Arcade_mode">מצב תחרותי</string>
     <string name="main_sound">מוזיקה</string>
     <string name="sound_effects">צליל אפקטים</string>
+    <string name="Progress">אתה בטוח שאתה רוצה למחוק את כל ההתקדמות?</string>
+    <string name="Yes">כן</string>
+    <string name="No">לא</string>
 </resources>
