finishd the basic of the score board activity + player class

--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -8,4 +8,5 @@
     <string name="Progress">אתה בטוח שאתה רוצה למחוק את כל ההתקדמות?</string>
     <string name="Yes">כן</string>
     <string name="No">לא</string>
+    <string name="HigeScore">שיאים</string>
 </resources>
