--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Progress">are you sure you want to reset all your progress?</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
+    <string name="HigeScore">HigeScore</string>
 
 
 </resources>
