final with toutorial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
 
     <string name="app_name">MakeItEven</string>
 
-    <string name="Stage_mode">Stage mode</string>
+    <string name="Stage_mode">Stage Mode</string>
 
-    <string name="Arcade_mode">Arcade mode</string>
+    <string name="Arcade_mode">Arcade Mode</string>
 
     <string name="main_sound">Main sound</string>
 
